--- a/d01/part1/CMakeLists.txt
+++ b/d01/part1/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
-project(d01)
+project(d01_part01)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(d01 src/main.cpp)
+add_executable(d01_part01 src/main.cpp)
