--- a/d06/CMakeLists.txt
+++ b/d06/CMakeLists.txt
@@ -4,6 +4,6 @@ project(d06)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(d06 src/main.cpp
-        src/Guard.cpp
-        src/Guard.h
+        src/guard.cpp
+        src/guard.h
 )
