--- a/d12/CMakeLists.txt
+++ b/d12/CMakeLists.txt
@@ -2,5 +2,7 @@ cmake_minimum_required(VERSION 3.30)
 project(d12)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(d12 src/main.cpp)
